Fixed HDRs include and added module for build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,7 +64,7 @@ set(HDRS
 )
 
 add_library(midifile STATIC ${SRCS} ${HDRS})
-target_include_directories(midifile INTERFACE ${HDS})
+target_include_directories(midifile INTERFACE ${HDRS})
 
 ##############################
 ##
